# monogon

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  main.cpp
cmake/: CodeCoverage.cmake  Tools.cmake  Warnings.cmake
configured/: CMakeLists.txt  config.h.in
include/monogon/: Array.h  Matrix.h  Operation.h  Tensor.h  Variable.h  Vector.h
include/monogon/activation/: ActivationFunction.h
include/monogon/initializer/: Initializer.h
include/monogon/layer/: Activation.h  BatchNormalization.h  Conv2D.h  Dense.h  Input.h  Layer.h
include/monogon/loss/: Loss.h  MSE.h
include/monogon/metric/: CategoricalAccuracy.h  Metric.h
include/monogon/model/: Model.h  Sequential.h
include/monogon/optimizer/: Optimizer.h  SGD.h
include/monogon/tool/: ArgMax.h  ConfusionMatrix.h  Index.h  OneHot.h  Shape.h  Slice.h
include/monogon/utils/: low_level.h
include/monogon/view/: ModelRenderer.h
src/: CMakeLists.txt  Index.cpp  Shape.cpp  library.cpp  low_level.cpp
tests/: CMakeLists.txt  activation_function.cpp  array.cpp  initializer.cpp  layer.cpp  loss.cpp  matrix.cpp  metric.cpp  model.cpp  one_hot.cpp  tensor.cpp  tool.cpp  utlis.cpp  variable.cpp  vector.cpp
